--- a/templates/index.html
+++ b/templates/index.html
@@ -2,26 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>React boilerplate</title>
+    <title>React Giphy</title>
   </head>
   <body>
     <div id="root"></div>
-
-    handleClick = () => {
-      this.setState({
-        clicked: !this.state.clicked,
-        counter: this.state.count + 1
-      });
-    }
-
-    render () {
-      return (
-        <div className={this.state.clicked ? 'clicked' : null } onClick={this.handleClick}>
-          hello {this.props.name} {this.state.counter}
-        </div>
-      )
-    }
-
   </body>
 </html>
