--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,22 @@
   </head>
   <body>
     <div id="root"></div>
+
+
+handleClick = () => {
+  this.setState({
+    clicked: !this.state.clicked,
+    counter: this.state.count + 1
+  });
+};
+
+render () {
+  return (
+    <div className={this.state.clicked ? 'clicked' : null } onClick={this.handleClick}>
+      hello {this.props.name} {this.state.counter}
+    </div>
+  )
+};
+
   </body>
 </html>
